Fixed tabs name

--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-  <title>Remake Barber - Blog Details</title>
+  <title>{{ post.title }}</title>
 {% endblock %}
 
 {% block content %}
