--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-  <title>Remake Barber - Contact</title>
+  <title>Sensive Blog - Contact</title>
 {% endblock %}
 
 {% block content %}
