--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,6 +6,7 @@
 {% block content %}
   {% load static %}
   <!--================ Hero sm banner start =================-->
+  <section class="mb-30px">
     <div class="container">
       <div class="hero-banner hero-banner--sm">
         <div class="hero-banner__content">
@@ -26,7 +27,7 @@
   <section class="section-margin--small section-margin">
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4">
-        {{html_map|safe}}
+        {{ html_map|safe }}
       </div>
       <div class="row">
         <div class="col-md-4 col-lg-3 mb-4 mb-md-0">
